Scale growing collection views
